--- a/baguio.html
+++ b/baguio.html
@@ -7,6 +7,26 @@
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="page-styles.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+  <style>
+    /* Optional: Make the embedded video responsive */
+    .video-container {
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      height: 0;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+    }
+
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
 
@@ -21,7 +41,7 @@
     </button>
     <nav class="navbar">
       <ul>
-        <li><a href="index.html#hero-section">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="index.html#about-section">About</a></li>
         <li><a href="index.html#services-section">Services</a></li>
         <li><a href="index.html#contact-section">Contact Us</a></li>
@@ -44,10 +64,15 @@
     <div class="video-section">
       <h2>Feel the Cool Breeze of Baguio</h2>
       <div class="video-container">
-        <video controls width="100%" height="auto" poster="images/Baguio.jpg">
-          <source src="mp4/baguio.mp4" type="video/mp4"/>
-          Your browser does not support the video tag.
-        </video>
+        <!-- Your YouTube embedded video -->
+        <iframe 
+          src="https://www.youtube.com/embed/ir-Bt8HK4Eo?si=RWWNYEt3-yCY-qYn" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" 
+          allowfullscreen>
+        </iframe>
       </div>
     </div>
 
