--- a/bohol.html
+++ b/bohol.html
@@ -7,6 +7,45 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="page-styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+  <style>
+    /* Video section styling */
+    .video-section {
+      text-align: center;
+      margin: 60px auto;
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 20px;
+      width: 90%;
+      max-width: 900px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    }
+
+    .video-section h2 {
+      color: #fff;
+      margin-bottom: 20px;
+      font-size: 2rem;
+      letter-spacing: 1px;
+    }
+
+    .video-container {
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      height: 0;
+      overflow: hidden;
+      border-radius: 15px;
+    }
+
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 15px;
+    }
+  </style>
 </head>
 <body>
 
@@ -17,8 +56,6 @@
       <div class="logo-text">BYAHEVERSE</div>
       <div class="tagline">Travel meets the metaverse</div>
     </div>
-
-    <!-- Removed hamburger button -->
 
     <nav class="navbar">
       <ul>
@@ -48,10 +85,14 @@
     <div class="video-section">
       <h2>Explore the Beauty of Bohol</h2>
       <div class="video-container">
-        <video controls width="100%" height="auto" poster="images/Bohol.jpg">
-          <source src="mp4/bohol.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
+        <iframe 
+          src="https://www.youtube.com/embed/MXQ3Pu1GkXY?si=bM_hj4dorutQQ_Nh" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" 
+          allowfullscreen>
+        </iframe>
       </div>
     </div>
 
@@ -59,7 +100,7 @@
     <div class="introduction-section">
       <h2>The Beauty of Bohol</h2>
       <p>
-        Bohol is famous for its stunning Chocolate Hills, white sand beaches, and the adorable tarsier—the world’s smallest primate.
+        Bohol is famous for its stunning Chocolate Hills, white sand beaches, and the adorable tarsier — the world’s smallest primate.
         Visit Panglao Island for diving and snorkeling, take a river cruise on the Loboc River, or explore centuries-old churches and historical landmarks.
         With its laid-back vibe and natural wonders, Bohol offers the perfect balance of adventure and relaxation.
       </p>
