--- a/samal-island.html
+++ b/samal-island.html
@@ -1,4 +1,4 @@
-index<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -7,6 +7,50 @@ index<!DOCTYPE html>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="page-styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <style>
+    /* Centered and Responsive Video Section */
+    .video-section {
+      text-align: center;
+      background: linear-gradient(to bottom right, #0d0d0d, #1a1a1a);
+      color: #fff;
+      padding: 60px 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .video-section h2 {
+      font-size: 2rem;
+      margin-bottom: 25px;
+      color: #00bcd4;
+      letter-spacing: 1px;
+    }
+
+    .video-container {
+      position: relative;
+      width: 100%;
+      max-width: 900px;
+      aspect-ratio: 16 / 9;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 15px;
+      overflow: hidden;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.7);
+      background-color: #000;
+    }
+
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
 
@@ -18,8 +62,6 @@ index<!DOCTYPE html>
       <div class="tagline">Travel meets the metaverse</div>
     </div>
 
-    <!-- Removed the hamburger menu -->
-    
     <nav class="navbar">
       <ul>
         <li><a href="index.html#hero-section">Home</a></li>
@@ -44,14 +86,18 @@ index<!DOCTYPE html>
       </div>
     </div>
     
-    <!-- Video Section -->
+    <!-- Centered Video Section -->
     <div class="video-section">
       <h2>Explore the Beauty of Samal</h2>
       <div class="video-container">
-        <video controls width="100%" height="auto" poster="images/Samal.jpg">
-          <source src="mp4/samal.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
+        <iframe 
+          src="https://www.youtube.com/embed/XEnQB3p8lIM?si=DZlV8hEAYQAJr-LN"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen>
+        </iframe>
       </div>
     </div>
 
